<resources>
    <string name="app_name">Allergen Tracker</string>
    <string name="scan">Scan</string>
    <string name="add_to_db">Add to DB</string>
    <string name="barcode_number">barcode number</string>
    <string name="textview">TextView</string>
    <string name="company_name">Company Name</string>
    <string name="product_name">Product Name</string>
    <string name="wheat">חיטה</string>
    <string name="eggs">ביצים</string>
    <string name="soy">סויה</string>
    <string name="oat">שיבולת שועל</string>
    <string name="seasame">שומשום</string>
    <string name="nuts">בוטנים</string>
    <string name="rye">שיפון</string>
    <string name="barley">שעורה</string>
    <string name="milk">חלב</string>
    <string name="seafruits">פירות ים</string>
    <string name="nuts2">אגוזים</string>
    <string name="fish">דגים</string>
    <string name="products_table">Products Table</string>
    <string name="scanner">Scanner</string>
    <string name="product_num">Product Num</string>
    <string name="name">Name</string>
    <string name="allergens">Allergens</string>
    <string name="company">Company</string>
    <string name="add_product">Add Product</string>
    <string name="show_products">Show Products</string>
    <string name="misc">Misc.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="info">Info</string>
    <string name="registration">Registration</string>
    <string name="user_name">User Name</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="back">חזרה</string>
    <string name="logout">התנתקות</string>
    <string name="app_logo">App Logo</string>
    <string name="information">Information</string>
    <string name="food_allergy_is_an_immune_system_reaction_that_occurs_soon_after_eating_a_certain_food_even_a_tiny_amount_of_the_allergy_causing_food_can_trigger_signs_and_symptoms_such_as_digestive_problems_hives_or_swollen_airways_in_some_people_a_food_allergy_can_cause_severe_symptoms_or_even_a_life_threatening_reaction_known_as_anaphylaxis">Food allergy is an immune system reaction that occurs soon after eating a certain food. Even a tiny amount of the allergy-causing food can trigger signs and symptoms such as digestive problems, hives or swollen airways. In some people, a food allergy can cause severe symptoms or even a life-threatening reaction known as anaphylaxis.</string>
    <string name="general_information_on_food_allergies">General Information On Food Allergies</string>
    <string name="symptoms">Symptoms</string>
    <string name="for_some_people_an_allergic_reaction_to_a_particular_food_may_be_uncomfortable_but_not_severe_for_other_people_an_allergic_food_reaction_can_be_frightening_and_even_life_threatening_food_allergy_symptoms_usually_develop_within_a_few_minutes_to_2_hours_after_eating_the_offending_food_rarely_symptoms_may_be_delayed_for_several_hours">For some people, an allergic reaction to a particular food may be uncomfortable but not severe. For other people, an allergic food reaction can be frightening and even life-threatening. Food allergy symptoms usually develop within a few minutes to 2 hours after eating the offending food. Rarely, symptoms may be delayed for several hours.</string>
    <string name="the_most_common_food_allergy_signs_and_symptoms_include">The most common food allergy signs and symptoms include:</string>
    <string name="u2022_hives_itching_or_eczema">• Hives, itching or eczema</string>
    <string name="u2022_swelling_of_the_lips_face_tongue_and_throat_or_other_parts_of_the_body">• Swelling of the lips, face, tongue and throat or other parts of the body</string>
    <string name="u2022_wheezing_nasal_congestion_or_trouble_breathing">• Wheezing, nasal congestion or trouble breathing</string>
    <string name="u2022_abdominal_pain_diarrhea_nausea_or_vomiting">• Abdominal pain, diarrhea, nausea or vomiting</string>
    <string name="u2022_dizziness_lightheadedness_or_fainting">• Dizziness, lightheadedness or fainting</string>
    <string name="when_to_see_a_doctor">When To See A Doctor</string>
    <string name="see_your_health_care_provider_or_allergist_if_you_have_food_allergy_symptoms_shortly_after_eating_if_possible_see_your_provider_when_the_allergic_reaction_is_occurring_this_will_help_your_provider_make_a_diagnosis">See your health care provider or allergist if you have food allergy symptoms shortly after eating. If possible, see your provider when the allergic reaction is occurring. This will help your provider make a diagnosis.</string>
    <string name="seek_emergency_treatment_if_you_develop_any_signs_or_symptoms_of_anaphylaxis_such_as">Seek emergency treatment if you develop any signs or symptoms of anaphylaxis, such as:</string>
    <string name="u2022_constriction_of_airways_that_makes_it_difficult_to_breathe">• Constriction of airways that makes it difficult to breathe</string>
    <string name="u2022_shock_with_a_severe_drop_in_blood_pressure">• Shock with a severe drop in blood pressure</string>
    <string name="u2022_rapid_pulse_n_u2022_dizziness_or_lightheadedness">• Rapid pulse \n • Dizziness or lightheadedness</string>
    <string name="precautions">Precautions</string>
    <string name="once_a_food_allergy_has_already_developed_the_best_way_to_prevent_an_allergic_reaction_is_to_know_and_avoid_foods_that_cause_signs_and_symptoms_for_some_people_this_is_a_mere_inconvenience_but_others_find_it_a_greater_hardship_also_some_foods_when_used_as_ingredients_in_certain_dishes_may_be_well_hidden_this_is_especially_true_in_restaurants_and_in_other_social_settings_nif_you_know_you_have_a_food_allergy_follow_these_steps">Once a food allergy has already developed, the best way to prevent an allergic reaction is to know and avoid foods that cause signs and symptoms. For some people, this is a mere inconvenience, but others find it a greater hardship. Also, some foods — when used as ingredients in certain dishes — may be well hidden. This is especially true in restaurants and in other social settings.\nIf you know you have a food allergy, follow these steps:</string>
    <string name="u2022_know_what_you_re_eating_and_drinking_be_sure_to_read_food_labels_carefully_n_u2022_if_you_have_already_had_a_severe_reaction_wear_a_medical_alert_bracelet_or_necklace_that_lets_others_know_that_you_have_a_food_allergy_in_case_you_have_a_reaction_and_you_re_unable_to_communicate_n_u2022_talk_with_your_doctor_about_prescribing_emergency_epinephrine_you_may_need_to_carry_an_epinephrine_autoinjector_adrenaclick_epipen_if_you_re_at_risk_of_a_severe_allergic_reaction_n_u2022_be_careful_at_restaurants_be_certain_your_server_or_chef_is_aware_that_you_absolutely_can_t_eat_the_food_you_re_allergic_to_and_you_need_to_be_completely_certain_that_the_meal_you_order_doesn_t_contain_it_also_make_sure_food_isn_t_prepared_on_surfaces_or_in_pans_that_contained_any_of_the_food_you_re_allergic_to_n_u2022_plan_meals_and_snacks_before_leaving_home_if_necessary_take_a_cooler_packed_with_allergen_free_foods_when_you_travel_or_go_to_an_event_if_you_or_your_child_can_t_have_the_cake_or_dessert_at_a_party_bring_an_approved_special_treat_so_no_one_feels_left_out_of_the_celebration">• Know what you\'re eating and drinking. Be sure to read food labels carefully. \n• If you have already had a severe reaction, wear a medical alert bracelet or necklace that lets others know that you have a food allergy in case you have a reaction and you\'re unable to communicate.\n• Talk with your doctor about prescribing emergency epinephrine. You may need to carry an epinephrine autoinjector (Adrenaclick, EpiPen) if you\'re at risk of a severe allergic reaction.\n• Be careful at restaurants. Be certain your server or chef is aware that you absolutely can\'t eat the food you\'re allergic to, and you need to be completely certain that the meal you order doesn\'t contain it. Also, make sure food isn\'t prepared on surfaces or in pans that contained any of the food you\'re allergic to.\n• Plan meals and snacks before leaving home. If necessary, take a cooler packed with allergen-free foods when you travel or go to an event. If you or your child can\'t have the cake or dessert at a party, bring an approved special treat so no one feels left out of the celebration.</string>
    <string name="information_taken_from_the_website">Information taken from the website:</string>
    <string name="https_www_mayoclinic_org_diseases_conditions_food_allergy_symptoms_causes_syc_20355095">https://www.mayoclinic.org/diseases-conditions/food-allergy/symptoms-causes/syc-20355095</string>
    <string name="u2022_tingling_or_itching_in_the_mouth">• tingling or itching in the mouth</string>
    <string name="products_list">Products List</string>
    <string name="company_name2">שם החברה:</string>
    <string name="product_name2">שם המוצר:</string>
    <string name="allergens2">אלרגנים:</string>
    <string name="filler">ממלא מקום</string>
    <string name="next_page">Next Page</string>
    <string name="contact_medical_experts">Contact Medical Experts</string>
    <string name="websiteclick"><a href="https://www.mayoclinic.org/diseases-conditions/food-allergy/symptoms-causes/syc-20355095">Mayo-Clinic Website</a></string>
    <string name="login1">התחברות</string>
    <string name="register1">הרשמה</string>
    <string name="addH">הוספת מוצר</string>
    <string name="scanH">סריקה</string>
    <string name="infoH">מידע</string>
    <string name="emailH">אימייל</string>
    <string name="passwordH">סיסמה</string>
    <string name="logoutH">התנתקות</string>
    <string name="productnameH">שם מוצר</string>
    <string name="companynameH">שם חברה</string>
    <string name="barcodeH">ברקוד</string>
    <string name="addproductH">הוספת מוצר חדש</string>
    <string name="backH">חזרה</string>
    <string name="registrationH">הרשמה</string>
    <string name="newuserH">יצירת משתמש</string>
    <string name="UserName">שם משתמש</string>
    <string name="menu_open">פתח</string>
    <string name="menu_close">סגור</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="genInfo">מידע כללי</string>
    <string name="Exp">מומחים</string>
    <string name="yahelstr">עמותת יהל</string>
    <string name="kopah">קופות חולים</string>
    <string name="clalit_image">clalit image</string>
    <string name="meuhedet_image">meuhedet image</string>
    <string name="leumit_image">leumit image</string>
    <string name="maccabi_image">maccabi image</string>
    <string name="yahel_image">yahel image</string>
    <string name="login_slogan">התחברו בשביל להוסיף מוצרים חדשים למאגר!</string>
    <string name="login_welcome_text">ברוכים השבים</string>
    <string name="login_user_logo">user logo</string>
    <string name="login_recovery">שחזור סיסמה</string>
    <string name="login_register">משתמש חדש? הירשם</string>
    <string name="signup_welcome">ברוכים הבאים</string>
    <string name="signup_slogan">הירשמו ותוכלו להוסיף מוצרים למאגר!</string>
    <string name="signup_newuser">משתמש קיים? התחברות</string>
    <string name="reset_email">הכנס מייל</string>
    <string name="reset_enter_email">הכניסו את האימייל של החשבון שלכם</string>
    <string name="menu_mainpage">מסך ראשי</string>
    <string name="menu_addproduct">הוספת מוצר</string>
    <string name="menu_info">מידע נוסף</string>
    <string name="menu_logout">יציאה מהמשתמש</string>
    <string name="menu_group1">פעולות</string>
    <string name="menu_group2">משתמש</string>
    <string name="add_product_img">הוספת מוצר - תמונה</string>
    <string name="add_product_slogan">מלאו או הפרטים וסמנו את האלרגנים על מנת להוסיף את המוצר למאגר</string>
    <string name="mustard">חרדל</string>
    <string name="celery">סלרי</string>
    <string name="almond">שקדים</string>
    <string name="sulphate">סולפיט</string>
</resources>