<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_group1"
        android:id="@+id/submenu_1">

        <menu>

            <group android:checkableBehavior="single">

                <item android:id="@+id/nav_home" android:title="@string/menu_mainpage"
                    android:icon="@drawable/ic_baseline_home_24" />

                <item
                    android:id="@+id/nav_add" android:title="@string/menu_addproduct"
                    android:icon="@drawable/ic_baseline_add_24" />

                <item android:id="@+id/nav_info" android:title="@string/menu_info"
                    android:icon="@drawable/ic_baseline_info_24" />

            </group>

        </menu>

    </item>

    <item android:title="@string/menu_group2"
        android:id="@+id/submenu_2">

        <menu>

            <group android:checkableBehavior="single">

                <item android:id="@+id/nav_logout" android:title="@string/menu_logout"
                    android:icon="@drawable/logout" />

            </group>

        </menu>

    </item>

</menu>